@@ -1,7 +1,7 @@
 // ------------------------------------------------------------------------------
 //  <autogenerated>
 //      This code was generated by a tool.
-//      Mono Runtime Version: 2.0.50727.42
+//      
 // 
 //      Changes to this file may cause incorrect behavior and will be lost if 
 //      the code is regenerated.
@@ -71,7 +71,6 @@ namespace MonoDevelop.VersionControl.Dialogs {
             this.fileList = new Gtk.TreeView();
             this.fileList.CanFocus = true;
             this.fileList.Name = "fileList";
-            this.fileList.HeadersClickable = true;
             this.scrolledwindow1.Add(this.fileList);
             this.mainBox.Add(this.scrolledwindow1);
             Gtk.Box.BoxChild w4 = ((Gtk.Box.BoxChild)(this.mainBox[this.scrolledwindow1]));
