@@ -1,7 +1,7 @@
 // ------------------------------------------------------------------------------
 //  <autogenerated>
 //      This code was generated by a tool.
-//      Mono Runtime Version: 2.0.50727.42
+//      
 // 
 //      Changes to this file may cause incorrect behavior and will be lost if 
 //      the code is regenerated.
@@ -121,7 +121,6 @@ namespace MonoDevelop.VersionControl.Dialogs {
             // Container child hbox1.Gtk.Box+BoxChild
             this.repCombo = Gtk.ComboBox.NewText();
             this.repCombo.Name = "repCombo";
-            this.repCombo.Active = 0;
             this.hbox1.Add(this.repCombo);
             Gtk.Box.BoxChild w3 = ((Gtk.Box.BoxChild)(this.hbox1[this.repCombo]));
             w3.Position = 1;
@@ -165,7 +164,6 @@ namespace MonoDevelop.VersionControl.Dialogs {
             this.repoTree = new Gtk.TreeView();
             this.repoTree.CanFocus = true;
             this.repoTree.Name = "repoTree";
-            this.repoTree.HeadersClickable = true;
             this.scrolledwindow2.Add(this.repoTree);
             this.hbox2.Add(this.scrolledwindow2);
             Gtk.Box.BoxChild w9 = ((Gtk.Box.BoxChild)(this.hbox2[this.scrolledwindow2]));
@@ -345,7 +343,6 @@ namespace MonoDevelop.VersionControl.Dialogs {
             this.labelRepository = new Gtk.Label();
             this.labelRepository.Name = "labelRepository";
             this.labelRepository.Xalign = 0F;
-            this.labelRepository.LabelProp = "";
             this.table1.Add(this.labelRepository);
             Gtk.Table.TableChild w26 = ((Gtk.Table.TableChild)(this.table1[this.labelRepository]));
             w26.LeftAttach = ((uint)(1));
