@@ -1,7 +1,7 @@
 // ------------------------------------------------------------------------------
 //  <autogenerated>
 //      This code was generated by a tool.
-//      Mono Runtime Version: 2.0.50727.42
+//      
 // 
 //      Changes to this file may cause incorrect behavior and will be lost if 
 //      the code is regenerated.
@@ -69,7 +69,6 @@ namespace MonoDevelop.VersionControl {
             // Container child hbox1.Gtk.Box+BoxChild
             this.comboProtocol = Gtk.ComboBox.NewText();
             this.comboProtocol.Name = "comboProtocol";
-            this.comboProtocol.Active = 0;
             this.hbox1.Add(this.comboProtocol);
             Gtk.Box.BoxChild w1 = ((Gtk.Box.BoxChild)(this.hbox1[this.comboProtocol]));
             w1.Position = 0;
